[package]
name = "xx-pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
enumflags2 = "0.7.8"
log = "0.4.20"
paste = "1.0.14"
xx-core = { git = "https://github.com/davidzeng0/xx-core.git" }
xx-pulse-macros = { path = "macros" }

[dev-dependencies]
xx-core = { git = "https://github.com/davidzeng0/xx-core.git", features = ["test"] }